Add a dendrite-admin script to start/stop dendrite, and update docs